# XNATSlicer

./: CMakeLists.txt  License.txt  README.md  XnatSlicerReplaceString.py  gitadd.sh  tester.py
XNATSlicer/: CMakeLists.txt  XnatSlicer.py
XNATSlicer/Cache/downloads/: W029_MR_20110614_preop_20_TRA_T1_25mm.4dfp.hdr
XNATSlicer/Cache/projects/UCLA_1297_d/localFiles/: UCLA_1297_d-LOCALIZED.mrml  UCLA_1297_d.mrml
XNATSlicer/Cache/projects/UCLA_1297_g/localFiles/: UCLA_1297_g-LOCALIZED.mrml  UCLA_1297_g.mrml
XNATSlicer/Cache/projects/UCLA_1297_g/localFiles/Data/: F.fcsv
XNATSlicer/Cache/projects/demoTest1/localFiles/: demoTest1-LOCALIZED.mrml  demoTest1.mrml
XNATSlicer/Cache/projects/demoTest1/localFiles/Data/: F.fcsv
XNATSlicer/Cache/projects/demoTest3/localFiles/Data/: F.fcsv
XNATSlicer/Cache/projects/demoTest4/localFiles/: demoTest4-LOCALIZED.mrml  demoTest4.mrml
XNATSlicer/Cache/projects/demoTest4/localFiles/Data/: F.fcsv
XNATSlicer/Cache/projects/jonTest1/localFiles/: jonTest1-LOCALIZED.mrml  jonTest1.mrml
XNATSlicer/Cache/projects/jonTest1/localFiles/Data/: 6%3a%20SAG%20MPRAGE%208%20CHANNEL-label.nrrd
XNATSlicer/Cache/projects/test3a-2/localFiles/: test3a-2-LOCALIZED.mrml  test3a-2.mrml
XNATSlicer/Cache/projects/test3a-2/localFiles/Data/: F.acsv  F_1.acsv  F_2.acsv  F_3.acsv
XNATSlicer/Cache/projects/test3a/localFiles/: test3a-LOCALIZED.mrml  test3a.mrml
XNATSlicer/Cache/projects/test3a/localFiles/Data/: F.acsv  F_1.acsv  F_2.acsv  F_3.acsv
XNATSlicer/Cache/projects/test3a2/localFiles/: test3a2-LOCALIZED.mrml  test3a2.mrml
XNATSlicer/Cache/projects/test3a2/localFiles/Data/: F.acsv  F.fcsv  F_1.acsv  F_2.acsv  F_3.acsv
XNATSlicer/Cache/projects/test3a3/localFiles/: test3a3-LOCALIZED.mrml  test3a3.mrml
XNATSlicer/Cache/projects/test3a3/localFiles/Data/: F.acsv  F.fcsv  F_1.acsv  F_2.acsv  F_3.acsv
XNATSlicer/Cache/projects/test3ab/localFiles/: test3ab-LOCALIZED.mrml  test3ab.mrml
XNATSlicer/Cache/projects/test3ab/localFiles/Data/: F.acsv  F_1.acsv  F_2.acsv  F_3.acsv
XNATSlicer/Cache/projects/test3ab2/localFiles/: test3ab2-LOCALIZED.mrml  test3ab2.mrml
XNATSlicer/Cache/projects/test3ab2/localFiles/Data/: F.acsv  F_1.acsv  F_2.acsv  F_3.acsv
XNATSlicer/Cache/projects/test3b/localFiles/: test3b-LOCALIZED.mrml  test3b.mrml
XNATSlicer/Cache/projects/test3b/localFiles/Data/: 6%3a%20SAG%20MPRAGE%208%20CHANNEL-label.nrrd
XNATSlicer/Cache/projects/test5-b/localFiles/: test5-b.mrml
XNATSlicer/Cache/projects/test5-b/localFiles/Data/: F.fcsv
XNATSlicer/Cache/projects/test5-c/localFiles/: test5-c-LOCALIZED.mrml  test5-c.mrml
XNATSlicer/Cache/projects/test5/localFiles/: test5-LOCALIZED.mrml  test5.mrml
XNATSlicer/Cache/projects/test5/localFiles/Data/: F.fcsv
XNATSlicer/Cache/projects/test5d/localFiles/: test5d-LOCALIZED.mrml  test5d.mrml
XNATSlicer/Cache/projects/testAnalyze1/localFiles/: testAnalyze1-LOCALIZED.mrml  testAnalyze1.mrml
XNATSlicer/Settings/: SessionLog.txt  SettingsBACKUP.txt  XnatSettingsBACKUP.txt  XnatSettingsFile.ini  XnatSettingsOLD.txt  timerlog.txt
XNATSlicer/Testing/: XnatSlicerTest.py  __init__.py
XNATSlicer/Testing/Python/: getSizeTest.py  uploadTest.py
XNATSlicer/XnatSlicerLib/_external/: XnatIo.py
XNATSlicer/XnatSlicerLib/_external/MokaUtils/: MokaUtils.py  replaceString.py
XNATSlicer/XnatSlicerLib/ext/MokaUtils/: MokaUtils.py  injectInclude.py  replaceString.py
XNATSlicer/XnatSlicerLib/ext/MokaUtils/BACKUP_2014-01-27__16_52_14/io/: Loader.py  Loader_Mrb.py
XNATSlicer/XnatSlicerLib/ext/MokaUtils/BACKUP_2014-01-27__16_52_14/settings/: Settings.py  SettingsFile.py
XNATSlicer/XnatSlicerLib/ext/MokaUtils/BACKUP_2014-01-27__16_52_14/ui/: Buttons.py  FolderMaker.py  LoginMenu.py  MetadataEditor_Custom.py  NodeDetails.py  SettingsWindow.py  View_Tree.py  Viewer.py
XNATSlicer/XnatSlicerLib/ext/MokaUtils/BACKUP_2014-01-27__16_52_14/utils/: ScenePackager.py  SessionManager.py
XNATSlicer/XnatSlicerLib/ext/Xnat/: Xnat.py
XNATSlicer/XnatSlicerLib/io/: DeleteWorkflow.py  LoadWorkflow.py  Loader.py  Loader_Analyze.py  Loader_Dicom.py  Loader_File.py  Loader_Mrb.py  SaveWorkflow.py  Workflow_Delete.py  Workflow_Load.py  Workflow_Save.py  XnatAnalyzeLoadWorkflow.py  XnatDeleteWorkflow.py  XnatDicomLoadWorkflow.py  XnatFileLoadWorkflow.py  XnatIo.py  XnatLoadWorkflow.py  XnatLoader.py  XnatLoader_Analyze.py  XnatLoader_Dicom.py  XnatLoader_File.py  XnatLoader_Mrb.py  XnatSaveWorkflow.py  XnatSceneLoadWorkflow.py
XNATSlicer/XnatSlicerLib/settings/: CacheSettings.py  CheckBoxSetting.py  DetailsSettings.py  FontSetting.py  HostSettings.py  MetadataEditor.py  MetadataEditorSetting.py  MetadataSettings.py  Settings.py  SettingsFile.py  Settings_Cache.py  Settings_Details.py  Settings_Hosts.py  Settings_Metadata.py  Settings_View.py  Settings_View_Tree.py
XNATSlicer/XnatSlicerLib/ui/: Buttons.py  FolderMaker.py  LoginMenu.py  MetadataEditor.py  MetadataEditorSet.py  MetadataEditor_Custom.py  MetadataEditor_Default.py  MetadataManager.py  NodeDetails.py  Popup.py  SaveDialog.py  SearchBar.py  SettingsWindow.py  TreeView.py  View.py  View_Tree.py  Viewer.py  XnatButtons.py  XnatFolderMaker.py  XnatLoginMenu.py  XnatMetadataManager.py  XnatNodeDetails.py  XnatSaveDialog.py  XnatSearchBar.py  XnatSettingsWindow.py  XnatTreeView.py  XnatView.py  XnatViewer.py
XNATSlicer/XnatSlicerLib/ui/custom-qt-widgets/: AnimatedCollapsible.py  FingerTabWidget.py  HoverButton.py  VariableItemListWidget.py
XNATSlicer/XnatSlicerLib/ui/settings-widgets/: XnatCacheSettings.py  XnatDetailsSettings.py  XnatHostSettings.py  XnatMetadataEditor.py  XnatMetadataSettings.py  XnatSettings.py  XnatTreeViewSettings.py
XNATSlicer/XnatSlicerLib/utils/: Error.py  FileInfo.py  GLOB.py  MrmlParser.py  ScenePackager.py  SessionManager.py  SlicerUtils.py  Timer.py  XnatError.py  XnatFileInfo.py  XnatGlobals.py  XnatMrmlParser.py  XnatPopup.py  XnatScenePackager.py  XnatSessionManager.py  XnatSettingsFile.py  XnatSlicerGlobals.py  XnatSlicerUtils.py  XnatTimer.py  XnatUtils.py
XNATSlicer/_UTIL_/: injectInclude.py  replaceString.py
(+933 files in other folders)
